2007-12-14  mefyl  <mefyl@lrde.epita.fr>

	Fix console-server.
	* .automerge_moves: Remove erroneous entry.
	* src/console-server.cc: Apply changes lost during merge from
        trunk.

2007-12-14  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Make k2 compile again.
	* include/kernel/userver.hh (addConnection): Add an overload to
	support the legacy interface used by k1.  This is required to use
	the `network' module without forking it for k1 and k2.
	* include/kernel/userver.hxx (addConnection): Implement the new
	overload.
	* src/Makefile.am (dist_libkernel_la_SOURCES): Remove the files that
	no longer exist.
	(uconsole_SOURCES, uconsole_LDADD): Adjust the names to
	urbi_console_SOURCES / urbi_console_LDADD.
	* src/console-server.cc: Adjust the ctor and saveFile.
	* src/uconnection.cc: Do not reference non existent headers or
	members.

2007-12-14  mefyl  <mefyl@lrde.epita.fr>

	merge -r 2055:2066 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-14  Guillaume Deslandes  <deslandes@gostai.com>
	Make good use of period in urbi-console.
	* src/console-server.cc: Here.
	The "utime() < startTime + period" test was never true.

	2007-12-14  Matthieu Nottale  <nottale@gostai.com>
	Fix loadFile which can be used for binaries.
	* include/kernel/userver.hh: Add extra parameter to loadFile to
	  specify Queue type.
	* src/uexpression.cc: Pass it.
	* src/userver.cc: Do not output #push and #pop to DATA queue.

	2007-12-14  Akim Demaille  <demaille@gostai.com>
	Let urbi-console support network connections.
	Subscribe to src/network
	* src/Makefile.am: Adjust.
	* src/console-server.cc: Improve cli to match ucore-pc's.

	2007-12-14  Akim Demaille  <demaille@gostai.com>
	Fix CPP guard.
	* include/kernel/userver.hh: here.

	2007-12-13  Akim Demaille  <demaille@gostai.com>
	Specify URBI_SERVER.
	* tests-local.mk: We use urbi-console.

2007-12-14  mefyl  <mefyl@lrde.epita.fr>

	merge -r 2045:2055 https://svn.gostai.com/svn/kernel1/trunk